Added 6&8 Pet Gem Slot on Pet, Added new Pet Gems introduced in update on 24.02.2020

--- a/profiles/profile_view.html
+++ b/profiles/profile_view.html
@@ -197,7 +197,7 @@
                             </div>
                             <div class="stat threat">
                                 <div class="name">{GL_threat}</div>
-                                <div class="value">{CHAR_STATS:threat}</div>
+                                <div class="value">{CHAR_STATS:threat}%</div>
                             </div>
                             <div class="stat debuff-dmg">
                                 <div class="name">{GL_debuff_dmg}</div>
